--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "test": "mocha --require test/setup.js",
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate-production": "postgrator --config postgrator-production-config.js",
     "predeploy": "npm audit",
-    "deploy": "git push heroku master",
-    "migrate": "postgrator --config postgrator-config.js"
+    "deploy": "git push heroku master"
   },
   "keywords": [],
   "engines": {
